--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
         {
-            "src": "/index.js",
+            "src": "/index2.js",
             "use": "@vercel/node"
       } 
 ],
